
name:                vbdb
version:             0.2.0
synopsis:            Basic management of VBDb entries
-- description:
license:             BSD3
license-file:        LICENSE
author:              Iago Abal <mail@iagoabal.eu>
maintainer:          Iago Abal <mail@iagoabal.eu>
copyright:           2013-2014 Iago Abal, IT University of Copenhagen
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


executable vbdb
  main-is: BugData.hs
  other-modules: Note, FindConfig, Ifdefguards, LocSize, Params
  ghc-options: -Wall
  -- other-extensions:
  build-depends:       base >=4.5 && <5,
                       filepath ==1.3.*,
                       directory ==1.2.*,
                       bytestring ==0.10.*,
                       yaml-light ==0.1.*,
                       process ==1.2.*,
                       split ==0.2.*,
                       cmdargs >=0.10,
                       data-ordlist >= 0.4,
                       Decimal >= 0.4
  -- hs-source-dirs:
  default-language:    Haskell2010
